# strutture-dati-e-algoritmi

./: .gitignore  CMakeLists.txt  README.md  TaskList.md  insertion_sort.cpp  selection_sort.cpp  vcpkg.json
data_structures/doubly_linked_list/: CmakeLists.txt  doubly_linked_list.h  doubly_linked_list_demo.cpp
data_structures/doubly_linked_list/unit_tests/: CmakeLists.txt  doubly_linked_list_utest.cpp  main_utest.cpp
data_structures/dynamic_array/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  dynamic_array_demo.cpp  main.cpp
data_structures/dynamic_array/unit_tests/: CmakeLists.txt  dynamic_array_utest.cpp  main_utest.cpp
data_structures/dynamic_array_template/: CMakeLists.txt  dynamic_array.h  dynamic_array_demo.cpp
data_structures/dynamic_array_template/unit_tests/: CmakeLists.txt  dynamic_array_utest.cpp
data_structures/heap_minmax/: CmakeLists.txt  heap_minmax.h  heap_minmax_demo.cpp
data_structures/heap_minmax/unit_tests/: CmakeLists.txt  heap_minmax_utest.cpp
data_structures/queue_using_stacks/: CmakeLists.txt  queue_using_stacks.h  queue_using_stacks_demo.cpp
data_structures/queue_using_stacks/unit_tests/: CmakeLists.txt  queue_using_stacks_utest.cpp
data_structures/stack/: CmakeLists.txt  istack.h  stack_demo.cpp  stack_dynamic_array.h
data_structures/stack/unit_tests/: CmakeLists.txt  main_utest.cpp  stack_dynamic_array_utest.cpp
data_structures/stack_dll/: CmakeLists.txt  stackDLL.h  stackDLL_demo.cpp
data_structures/stack_dll/unit_tests/: CmakeLists.txt  stackDLL_utest.cpp
data_structures/tree/: CMakeLists.txt
data_structures/tree/tree_traversal/: CmakeLists.txt  basic_tree.h  basic_tree_demo.cpp
sorting_algorithms/: CMakeLists.txt  binary_search.cpp  bubble_sort.cpp  heap_sort.cpp  locality_of_reference.cpp  merge_sort.cpp  quick_sort.cpp
